--- a/r2/r2/templates/apihelp.html
+++ b/r2/r2/templates/apihelp.html
@@ -24,10 +24,82 @@
     import re
     from r2.lib.filters import safemarkdown
     from r2.controllers.api_docs import section_info
+    from r2.models.token import OAuth2Scope
 %>
 
 <%def name="api_method_id(uri, method)">${method}_${uri.replace('/', '_').strip('_')}</%def>
 <%def name="api_uri(uri)">${unsafe(re.sub(r'{(\w+)}', r'<em class="placeholder">\1</em>', uri))}</%def>
+
+<%def name="mode_selector(current_mode)">
+  <span class="mode-selector">
+    <a class="mode ${'mode-current' if current_mode == 'section' else ''}"
+       href="/dev/api">by section</a>
+    <a class="mode ${'mode-current' if current_mode == 'oauth' else ''}"
+       href="/dev/api/oauth">by oauth scope</a>
+  </span>
+</%def>
+
+<%def name="api_method_toc(api)">
+  <strong>API methods</strong>
+  ${mode_selector('section')}
+  <ul>
+  %for section in sorted(api):
+    <li>
+      <a href="#section_${section}" class="section">${section_info[section]['title']}</a>
+      <ul>
+        %for uri in sorted(api[section]):
+          <%
+             methods = sorted(api[section][uri].keys())
+             has_oauth = any(api[section][uri][method]['oauth_scopes']
+                             for method in methods)
+          %>
+          <li class="${'supports-oauth' if has_oauth else ''}">
+            <a href="#${api_method_id(uri, methods[0])}">${api_uri(uri)}</a>
+          </li>
+        %endfor
+      </ul>
+    </li>
+  %endfor
+  </ul>
+</%def>
+
+<%def name="oauth_toc(api, oauth_index)">
+  <strong>API methods</strong>
+  ${mode_selector('oauth')}
+  <ul>
+  %for scope, keys in sorted(oauth_index.iteritems()):
+    <li>
+      <a href="#scope_${scope}" class="section">${scope}</a>
+      <ul>
+        %for section, uri, method in sorted(keys):
+          <li>
+            <a href="#${api_method_id(uri, method)}">${api_uri(uri)}</a>
+          </li>
+        %endfor
+      </ul>
+    </li>
+  %endfor
+  </ul>
+</%def>
+
+<%def name="section_header(section)">
+  <h2 id="section_${section}">${section_info[section]['title']}</h2>
+  %if 'description' in section_info[section]:
+    <div class="description">
+      ${unsafe(safemarkdown(section_info[section]['description']))}
+    </div>
+  %endif
+</%def>
+
+<%def name="scope_header(scope)">
+  <h2 id="scope_${scope}">
+    ${OAuth2Scope.scope_info[scope]['name']}
+    <span class="scope-id">${scope}</span>
+  </h2>
+  <div class="description">
+    ${unsafe(safemarkdown(OAuth2Scope.scope_info[scope]['description']))}
+  </div>
+</%def>
 
 <%
   api = thing.api_docs
@@ -38,26 +110,11 @@
   <div class="toc">
     <ul>
       <li>
-        <strong>API methods</strong>
-        <ul>
-        %for section in sorted(api):
-          <li>
-          <a href="#section_${section}" class="section">${section_info[section]['title']}</a>
-            <ul>
-              %for uri in sorted(api[section]):
-                <%
-                   methods = sorted(api[section][uri].keys())
-                   has_oauth = any(api[section][uri][method]['oauth_scopes']
-                                   for method in methods)
-                %>
-                <li class="${'supports-oauth' if has_oauth else ''}">
-                  <a href="#${api_method_id(uri, methods[0])}">${api_uri(uri)}</a>
-                </li>
-              %endfor
-            </ul>
-          </li>
-        %endfor
-        </ul>
+        %if thing.mode == "oauth":
+          ${oauth_toc(thing.api_docs, thing.oauth_index)}
+        %else:
+          ${api_method_toc(thing.api_docs)}
+        %endif
       </li>
     </ul>
   </div>
@@ -73,11 +130,10 @@
 
   <div class="section methods">
     %for section in sorted(api):
-      <h2 id="section_${section}">${section_info[section]['title']}</h2>
-      %if 'description' in section_info[section]:
-        <div class="description">
-          ${unsafe(safemarkdown(section_info[section]['description']))}
-        </div>
+      %if thing.mode == 'oauth':
+        ${scope_header(section)}
+      %else:
+        ${section_header(section)}
       %endif
       %for uri in sorted(api[section]):
         %for method in sorted(api[section][uri]):
