Clean up oauth info bar on login page.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -5487,13 +5487,13 @@ tr.gold-accent + tr > td {
     height: 48px;
 }
 
-.infobar.client-info .md {
+.infobar.client-info div {
     line-height: 48px;
     margin-left: 56px;
 }
 
-.infobar.client-info .md p {
-    margin: 0;
+.infobar.client-info div p {
+    white-space: nowrap;
 }
 
 .oauth2-authorize {
