--- a/r2/r2/templates/clientinfobar.html
+++ b/r2/r2/templates/clientinfobar.html
@@ -21,11 +21,24 @@
 ###############################################################################
 
 <%!
-   from r2.lib.template_helpers import s3_https_if_secure
    from r2.lib.filters import safemarkdown
+   from r2.lib.template_helpers import s3_https_if_secure, static
 %>
 <%namespace file="utils.html" import="img_link"/>
+<%
+  icon_url = thing.client.icon_url or static('defaultapp.png')
+  if thing.client.about_url:
+      app = '&#32;<a href="%s">%s</a>' % (thing.client.about_url,
+                                          websafe(thing.client.name))
+  else:
+      app = '&#32;<b>%s</b>' % websafe(thing.client.name)
+%>
 <div class="infobar ${thing.extra_class}">
-  ${img_link(thing.client.name, s3_https_if_secure(thing.client.icon_url), thing.client.about_url, _class="icon")}
-  ${unsafe(safemarkdown(thing.message % dict(app_name=thing.client.name, app_about_url=thing.client.about_url)))}
+  ${img_link(thing.client.name, s3_https_if_secure(icon_url),
+             thing.client.about_url, _class="icon")}
+  <div>
+    <p>
+      ${unsafe(thing.message % dict(app=app))}
+    </p>
+  </div>
 </div>
