wiki: Remove some inline css.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -997,6 +997,10 @@ a.author { margin-right: 0.5em; }
     padding-left: 10px;
 }
 
+#wiki_revision_reason {
+    width: 100%;
+}
+
 .wiki-page .revision {
     transition: opacity 500ms;
     -o-transition: opacity 500ms;
