wiki: Rename c.wiki to c.wiki_page.

--- a/r2/r2/templates/wikieditpage.html
+++ b/r2/r2/templates/wikieditpage.html
@@ -48,5 +48,5 @@
     <input type="hidden" id="page" name="page" value="${thing.page}" />
     <input type="hidden" id="previous" name="previous" value="${thing.previous}" />
     <br/><br/><input type="submit" value="${_('save page')}" />
-    <input type="button" value="${_('cancel edit')}"  onclick="location.href='${thing.base_url}/${c.page}'" />
+    <input type="button" value="${_('cancel edit')}"  onclick="location.href='${thing.base_url}/${c.wiki_page}'" />
 </form>
