--- a/r2/r2/templates/wikibasepage.html
+++ b/r2/r2/templates/wikibasepage.html
@@ -28,7 +28,7 @@
         %endif
         "
         %if action[2]:
-            href="${thing.base_url}/${action[0]}/${c.page}"
+            href="${thing.base_url}/${action[0]}/${c.wiki_page}"
         %else:
             href="${thing.base_url}/${action[0]}"
         %endif
@@ -41,8 +41,8 @@
         %if thing.title:
             ${thing.title}
         %endif
-        %if c.page:
-            <strong>${c.page}</strong>
+        %if c.wiki_page:
+            <strong>${c.wiki_page}</strong>
         %endif
     </h1>
     
