--- a/r2/r2/templates/wikieditpage.html
+++ b/r2/r2/templates/wikieditpage.html
@@ -47,5 +47,5 @@
     %endif
     <input type="hidden" id="previous" name="previous" value="${thing.previous}" />
     <br/><br/><input type="submit" value="${_('save page')}" />
-    <input type="button" value="${_('cancel edit')}"  onclick="location.href='${thing.base_url}/${c.wiki_page}'" />
+    <input type="button" value="${_('cancel edit')}"  onclick="location.href='${thing.base_url}/${thing.page}'" />
 </form>
