--- a/r2/r2/templates/goldpayment.html
+++ b/r2/r2/templates/goldpayment.html
@@ -57,6 +57,8 @@
         %if thing.google_id:
           <form action="https://checkout.google.com/api/checkout/v2/checkoutForm/Merchant/${thing.google_id}"
                 id="BB_BuyButtonForm" method="post" name="BB_BuyButtonForm"
+                class="gold-checkout google-checkout"
+                data-vendor="google-checkout"
                 target="_top" style="display:inline">
             <input name="item_name_1" type="hidden" value="creddits"/>
             <input name="item_description_1" type="hidden"
@@ -75,12 +77,14 @@
                    value="${thing.passthrough}"/>
             <input name="item_currency_1" type="hidden" value="USD"/>
             <input name="_charset_" type="hidden" value="utf-8"/>
+            <input type="hidden" name="analyticsdata" value="">
             <button class="btn gold-button">${_("Google Checkout")}</button>
           </form>
         %endif
 
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post"
-              style="display:inline">
+              style="display:inline" class="gold-checkout"
+              data-vendor="paypal">
           <input type="hidden" name="cmd" value="_s-xclick" />
           <input type="hidden" name="custom" value="${thing.passthrough}" />
           %if thing.quantity:
@@ -94,6 +98,11 @@
           <div class="note">${_("Note: Google Checkout does not support ongoing subscriptions at this time.")}</div>
         %endif
       %endif
+      <div class="throbber"></div>
     </%utils:round_field>
   </div>
 </div>
+
+<script src="//checkout.google.com/files/digital/ga_post.js"
+  type="text/javascript"></script>
+
