Check authorize.net payment profile limit
Authorize.net enforces a limit (10) on the number of payment profiles that can
be created by one user. Now we disable the "create new profile" menu item
when the limit has been reached.

--- a/r2/r2/templates/paymentform.html
+++ b/r2/r2/templates/paymentform.html
@@ -59,7 +59,11 @@ ${unsafe(js.use('sponsored'))}
           Card: ${profile.payment.creditCard.cardNumber}
         </option>
       %endfor
-      <option value="">${_("create a new one...")}</option>
+      %if len(thing.profiles) >= thing.max_profiles:
+        <option disabled=true>${_("profile limit (%d) reached" % thing.max_profiles)}</option>
+      %else:
+        <option value="">${_("create a new one...")}</option>
+      %endif
     </select>
   </p>
   %else:
