Add support for "permanent" OAuth 2 grants.
If a client sends a user to the authorization page with a
"duration=permanent" parameter, we'll create a refresh token in addition
to the initial access token. When the client fetches the initial access
token with the authorization code, the refresh token will also be returned.
The client can then obtain new access tokens using the refresh token
instead of an authorization code.

Both refresh tokens and access tokens will be displayed on the user's apps
page (as well as the IP history page).

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -5482,7 +5482,7 @@ tr.gold-accent + tr > td {
 .oauth2-authorize {
     position: relative;
     background: url(../snoo-tray.png) no-repeat;
-    width: 442px;
+    width: 542px;
     height: 235px;
     margin: 40px auto 0;
     padding-left: 268px;
@@ -5524,7 +5524,7 @@ tr.gold-accent + tr > td {
 .oauth2-authorize .access {
     position: relative;
     float: right;
-    width: 410px;
+    width: 510px;
     padding: 10px 15px;
     font-size: 1.5em;
     line-height: 1.5em;
@@ -5550,6 +5550,8 @@ tr.gold-accent + tr > td {
     left: -18px;
     top: 13px;
 }
+
+.oauth2-authorize .access .notice { line-height: normal; }
 
 .oauth2-authorize h2 {
     font-size: 1em;
@@ -6182,7 +6184,7 @@ tr.gold-accent + tr > td {
 }
 
 .app-permissions li { position: relative; }
-.app-permissions-subreddits { display:block; margin-top: 1em; }
+.app-permissions-details { margin-top: 1em; }
 
 .app-scope {
     display: none;
