--- a/r2/r2/templates/oauth2authorization.html
+++ b/r2/r2/templates/oauth2authorization.html
@@ -21,6 +21,8 @@
 ###############################################################################
 
 <%!
+   import datetime
+   from r2.models import OAuth2AccessToken
    from r2.lib.template_helpers import static, s3_https_if_secure
 %>
 <%namespace file="prefapps.html" import="scope_details" />
@@ -53,6 +55,7 @@
       <input type="hidden" name="redirect_uri" value="${thing.redirect_uri}" />
       <input type="hidden" name="scope" value="${str(thing.scope)}" />
       <input type="hidden" name="state" value="${thing.state}" />
+      <input type="hidden" name="duration" value="${thing.duration}" />
       <input type="hidden" name="uh" value="${c.modhash}"/>
       <div>
         <input type="submit" class="fancybutton allow" name="authorize" value="${_("Allow")}" />
