--- a/r2/r2/templates/newlink.html
+++ b/r2/r2/templates/newlink.html
@@ -26,7 +26,7 @@
    from r2.lib.template_helpers import add_sr
 %>
 
-<%namespace file="utils.html" import="error_field, submit_form, _a_buffered, reddit_selector"/>
+<%namespace file="utils.html" import="error_field, submit_form, _a_buffered, reddit_selector, text_with_links"/>
 <%namespace name="utils" file="utils.html"/>
 
 <%
@@ -106,6 +106,20 @@ ${thing.formtabs_menu}
 ${thing.captcha}
     
 </div>
+
+<div class="roundfield info-notice">
+  ${text_with_links(_("please be mindful of reddit's %(few_rules)s and practice %(good_reddiquette)s."),
+      few_rules=dict(
+        link_text=_("few rules"),
+        path="/rules",
+        target="_blank"),
+      good_reddiquette=dict(
+        link_text=_("good reddiquette"),
+        path="/help/reddiquette",
+        target="_blank"),
+  )}
+</div>
+
 <input name="resubmit" value="${thing.resubmit}" type="hidden"/>
 <div class="spacer">
   <button class="btn" name="submit" value="form" type="submit">${_("submit")}</button>
