--- a/r2/r2/templates/clientinfobar.html
+++ b/r2/r2/templates/clientinfobar.html
@@ -25,20 +25,24 @@
    from r2.lib.template_helpers import s3_https_if_secure, static
 %>
 <%namespace file="utils.html" import="img_link"/>
+<%def name="app_link(app)" buffered="True">
+  <!-- SC_OFF -->
+  %if app.about_url:
+    <a href="${app.about_url}">${app.name}</a>
+  %else:
+    <b>${app.name}</b>
+  %endif
+  <!-- SC_ON -->
+</%def>
 <%
   icon_url = thing.client.icon_url or static('defaultapp.png')
-  if thing.client.about_url:
-      app = '&#32;<a href="%s">%s</a>' % (thing.client.about_url,
-                                          websafe(thing.client.name))
-  else:
-      app = '&#32;<b>%s</b>' % websafe(thing.client.name)
 %>
 <div class="infobar ${thing.extra_class}">
   ${img_link(thing.client.name, s3_https_if_secure(icon_url),
              thing.client.about_url, _class="icon")}
   <div>
     <p>
-      ${unsafe(thing.message % dict(app=app))}
+      ${unsafe(websafe(thing.message) % dict(app=app_link(thing.client)))}
     </p>
   </div>
 </div>
