Brick the submit page rule reminder.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -4961,7 +4961,7 @@ dd { margin-left: 20px;  }
 }
 
 .info-notice:before {
-    background-image: url(../icon-info.png);  /* SPRITE */
+    background-image: url(../brick-small.png);  /* SPRITE */
 }
 
 .linkinfo {
