--- a/r2/r2/templates/newlink.html
+++ b/r2/r2/templates/newlink.html
@@ -107,7 +107,7 @@ ${thing.captcha}
     
 </div>
 
-<div class="roundfield info-notice">
+<div class="roundfield info-notice" title="${_('why a brick? read to the bottom of the rules page to find out!')}">
   ${text_with_links(_("please be mindful of reddit's %(few_rules)s and practice %(good_reddiquette)s."),
       few_rules=dict(
         link_text=_("few rules"),
