--- a/r2/r2/templates/rulespage.html
+++ b/r2/r2/templates/rulespage.html
@@ -107,6 +107,6 @@ function toggle_expando(elem){
     <p>This last bit isn't a rule, but you should also be mindful of <a href="/help/reddiquette">&nbsp;reddiquette</a>, an&nbsp;<em>informal</em>&nbsp;expression of reddit's community values as written by the community itself. Please abide by it the best you can.</p>
   </div>
   <div class="info">
-  <img id="brick" class="bottom" alt="" src="${static('brick.png')}">
+  <img id="brick" class="bottom" title="${_("here at reddit, we inscribe our rules on a brick. screw tablets.")}" alt="" src="${static('brick.png')}">
   </div>
 </div>
