--- a/r2/r2/templates/thingupdater.html
+++ b/r2/r2/templates/thingupdater.html
@@ -35,6 +35,11 @@
         });
   $.map(friends, show_friend);
 
+  var gildings = ${unsafe(simplejson.dumps(thing.gildings))};
+  for (var gilded_comment in gildings) {
+    r.gold.gildComment(gilded_comment, gildings[gilded_comment]);
+  }
+
   var saves = ${unsafe(simplejson.dumps(list(thing.saves)))};
   $.map(saves, show_saved);
 
