--- a/r2/r2/templates/goldpayment.html
+++ b/r2/r2/templates/goldpayment.html
@@ -21,88 +21,90 @@
 ###############################################################################
 
 <%namespace file="utils.html" import="error_field, success_field, radio_type"/>
-<%namespace name="utils" file="utils.html"/>
 
 <%
    from r2.lib.filters import unsafe, safemarkdown
    from r2.lib.template_helpers import static
 %>
 
-<div class="content gold-form">
-  <div class="spacer">
+<div class="gold-form gold-payment ${'cloneable' if thing.clone_template else ''}">
+  <div class="roundfield">
+    <img src="${static('reddit_gold-70.png')}" class="gold-logo">
+    <div class="roundfield-content">
+      ${unsafe(safemarkdown(thing.summary, wrap=False))}
 
-    <%utils:round_field title="">
-      <img src="${static('reddit_gold-70.png')}" class="gold-logo"/>
-      <h1>${thing.summary}</h1>
-      %if thing.giftmessage:
-      <h1>${_("The following gift note will be attached:")}</h1>
+    %if thing.giftmessage:
+      <p>${_("The following gift note will be attached:")}</p>
       <div class="giftmessage">
-        ${unsafe(safemarkdown(thing.giftmessage))}
+        ${unsafe(safemarkdown(thing.giftmessage, wrap=False))}
       </div>
-      <br/>
+    %endif
+
+    %if thing.pay_from_creddits:
+      <form id="giftgold" action="/api/spendcreddits" method="post"
+            class="content"
+            onsubmit="return post_form(this, 'spendcreddits');">
+        <input type="hidden" name="months" value="${thing.months}">
+        <input type="hidden" name="passthrough" value="${thing.passthrough}" class="passthrough">
+        <button class="btn gold-button">${_("give")}</button>
+        <span class="status"></span>
+        <div class="throbber"></div>
+      </form>
+    %else:
+      <p>${_("Please select a payment method.")}</p>
+
+      %if thing.google_id:
+      <form action="https://checkout.google.com/api/checkout/v2/checkoutForm/Merchant/${thing.google_id}"
+            id="BB_BuyButtonForm" method="post" name="BB_BuyButtonForm"
+            class="gold-checkout google-checkout"
+            data-vendor="google-checkout"
+            target="${'_blank' if thing.clone_template else '_top'}">
+        <input name="item_name_1" type="hidden" value="creddits">
+        <input name="item_description_1" type="hidden"
+               %if thing.months != thing.quantity:
+                 value="${thing.quantity} year(s) of reddit gold"
+               %else:
+                 value="${thing.quantity} month(s) of reddit gold"
+               %endif
+               >
+        <input name="item_quantity_1" type="hidden"
+               value="${thing.quantity}">
+        <input name="item_price_1" type="hidden"
+               value="${thing.price}">
+        <input type="hidden"
+               name="shopping-cart.items.item-1.merchant-private-item-data"
+               value="${thing.passthrough}" class="passthrough">
+        <input name="item_currency_1" type="hidden" value="USD">
+        <input name="_charset_" type="hidden" value="utf-8">
+        <input type="hidden" name="analyticsdata" value="">
+        <button class="btn gold-button">${_("Google Checkout")}</button>
+      </form>
       %endif
 
-      %if thing.pay_from_creddits:
-        <form id="giftgold" action="/api/spendcreddits" method="post"
-              class="content"
-              onsubmit="return post_form(this, 'spendcreddits');">
-          <input type="hidden" name="months" value="${thing.months}" />
-          <input type="hidden" name="passthrough" value="${thing.passthrough}" />
-          <button class="btn gold-button">${_("give")}</button>
-          <span class="status"></span>
-        </form>
-      %else:
-        ${_("Please select a payment method.")}
-        <br/>
-        %if thing.google_id:
-          <form action="https://checkout.google.com/api/checkout/v2/checkoutForm/Merchant/${thing.google_id}"
-                id="BB_BuyButtonForm" method="post" name="BB_BuyButtonForm"
-                class="gold-checkout google-checkout"
-                data-vendor="google-checkout"
-                target="_top" style="display:inline">
-            <input name="item_name_1" type="hidden" value="creddits"/>
-            <input name="item_description_1" type="hidden"
-                   %if thing.months != thing.quantity:
-                     value="${thing.quantity} year(s) of reddit gold"
-                   %else:
-                     value="${thing.quantity} month(s) of reddit gold"
-                   %endif
-                   />
-            <input name="item_quantity_1" type="hidden"
-                   value="${thing.quantity}"/>
-            <input name="item_price_1" type="hidden"
-                   value="${thing.price}"/>
-            <input type="hidden"
-                   name="shopping-cart.items.item-1.merchant-private-item-data"
-                   value="${thing.passthrough}"/>
-            <input name="item_currency_1" type="hidden" value="USD"/>
-            <input name="_charset_" type="hidden" value="utf-8"/>
-            <input type="hidden" name="analyticsdata" value="">
-            <button class="btn gold-button">${_("Google Checkout")}</button>
-          </form>
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post"
+            class="gold-checkout"
+            data-vendor="paypal" target="${'_blank' if thing.clone_template else '_top'}">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="custom" value="${thing.passthrough}" class="passthrough">
+        %if thing.quantity:
+          <input type="hidden" name="quantity" value="${thing.quantity}">
         %endif
+        <input type="hidden" name="hosted_button_id" value="${thing.paypal_buttonid}">
+        <button type="submit" class="btn gold-button">${_("PayPal")}</button>
+      </form>
 
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post"
-              style="display:inline" class="gold-checkout"
-              data-vendor="paypal">
-          <input type="hidden" name="cmd" value="_s-xclick" />
-          <input type="hidden" name="custom" value="${thing.passthrough}" />
-          %if thing.quantity:
-            <input type="hidden" name="quantity" value="${thing.quantity}" />
-          %endif
-          <input type="hidden" name="hosted_button_id" value="${thing.paypal_buttonid}" />
-          <button type="submit" class="btn gold-button">${_("PayPal")}</button>
-        </form>
-
-        %if not thing.google_id:
-          <div class="note">${_("Note: Google Checkout does not support ongoing subscriptions at this time.")}</div>
-        %endif
-      %endif
       <div class="throbber"></div>
-    </%utils:round_field>
+
+    %if not thing.google_id:
+      <div class="note">${_("Note: Google Checkout does not support ongoing subscriptions at this time.")}</div>
+    %endif
+  %endif
+    </div>
   </div>
 </div>
 
+% if not thing.clone_template:
 <script src="//checkout.google.com/files/digital/ga_post.js"
   type="text/javascript"></script>
+% endif
 
