Add gold coin icons for comment gilding.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -6273,18 +6273,19 @@ table.diff {font-size: small;}
 .diff_sub {background-color:lightcoral}
 
 span.gilded-comment-icon {
+    position: relative;
     display: inline-block;
-    background-image: url(../gold-coin.png); /* SPRITE */
+    background-image: url(../gold-coin.png);  /* SPRITE */
+    background-repeat: no-repeat;
     height: 14px;
-    width: 14px;
-    margin: 0 0 -3px 8px;
+    width: 13px;
+    margin: 0 0 -14px 8px;
+    top: -8px;
+    vertical-align: middle;
 }
 
 .user-gilded > .entry span.gilded-comment-icon {
-    background-image: url(../gold-coin-yours.png); /* SPRITE */
-    height: 24px;
-    width: 24px;
-    margin-bottom: -8px;
+    width: 23px;
 }
 
 .buttons li.comment-save-button { display: none; }
